# cookiecutter-pdm-example

./: CONTRIBUTING.rst  Dockerfile  README.md  mkdocs.yml  pyproject.toml
docs/: index.md  modules.md
tests/: test_foo.py
