[project]
name = "cookiecutter_pdm_example"
dynamic = ["version"]
description = "This is a template repository for Python projects that use PDM for their dependency management."
authors = [
    {name = "Florian Maas", email = "fpgmaas@gmail.com"},
]
readme = "README.md"
packages = [
  {include = "cookiecutter_pdm_example"}
]
requires-python = ">=3.8,<4.0"
dependencies = []
license = {text = "MIT license"}
keywords = ['python']

[tool.pdm.version]
source = "scm"

[project.urls]
Homepage = "https://fpgmaas.github.io/cookiecutter-pdm-example/"
Repository = "https://github.com/fpgmaas/cookiecutter-pdm-example"
Documentation = "https://fpgmaas.github.io/cookiecutter-pdm-example/"

[tool.pdm.dev-dependencies]
test = [
  "pytest>=7.2.0",
  "pytest-cov>=4.0.0"
  ]
dev = [
"deptry>=0.6.4",
"mypy>=0.981",
  "pre-commit>=2.20.0",
  "tox>=3.25.1"
]
docs = [
  "mkdocs>=1.4.2",
  "mkdocs-material>=8.5.10",
  "mkdocstrings[python]>=0.19.0"
]

[tool.pdm.build]
excludes = ["./**/.git"]
package-dir = "."
includes = ["cookiecutter_pdm_example"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.mypy]
files = ["cookiecutter_pdm_example"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["cookiecutter_pdm_example"]


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
